<resources>
    <string name="welcome_title">Protect your privacy with Proton</string>
    <string name="welcome_subtitle">Encryption keeps your data private. Your data truly belongs to you.</string>
    <string name="welcome_subtitle_mail">Encrypted email that keeps your conversations private. Your inbox truly belongs to you.</string>
    <string name="welcome_subtitle_mail_alt">Privacy. Security. Convenience. Encrypted email that gives you full control of your personal data.</string>
    <string name="welcome_subtitle_drive">The convenience of cloud storage and the security of encryption technology. Finally a cloud storage solution you can trust.</string>
    <string name="welcome_subtitle_drive_alt">The safest way to store your files. Upload, sync, and share with the strongest encryption available.</string>
    <string name="welcome_subtitle_calendar">Encrypted calendar that keeps your life events private, safe, and secure.</string>
    <string name="welcome_subtitle_calendar_alt">Our end-to-end encrypted calendar helps you stay organized, on track, and in control.</string>
    <string name="welcome_subtitle_vpn">High-speed Swiss VPN that safeguards your privacy by encrypting your internet connection.</string>
    <string name="welcome_subtitle_vpn_alt">High-speed Swiss VPN that protects your privacy. Maximum security, 1,600+ servers, and no restrictions.</string>
    <string name="welcome_subtitle_pass">All your passwords. Securely in one place and protected by the most trusted name in privacy.</string>
    <string name="welcome_subtitle_pass_alt">All your passwords. Securely in one place and protected by the most trusted name in privacy.</string>
    <string name="welcome_privacy_by_default">Privacy by default</string>
    <string name="auth_password_label">Password</string>
    <string name="auth_password_help">Password must contain at least 8 characters</string>
    <string name="auth_current_login_password">Current login password</string>
    <string name="auth_enter_six_digit_code">Enter 6-digit code</string>
    <string name="auth_second_factor_code">Two-Factor code</string>
    <string name="auth_email">Email</string>
    <string name="auth_email_username">Username or email</string>
    <string name="auth_account_details">Enter your Proton Account details.</string>
    <string name="auth_sign_in">Sign in</string>
    <string name="auth_sign_out">Sign out</string>
    <string name="auth_sign_in_action">Sign in</string>
    <string name="auth_sign_in_sso">Sign in to your organization</string>
    <string name="auth_sign_in_with_password">Sign in with a password</string>
    <string name="auth_continue_to_proton">to continue to Proton</string>
    <string name="auth_sign_in_with_sso">Sign in with SSO</string>
    <string name="auth_help_label">Help</string>
    <string name="auth_login_assistive_text">Please enter your Proton email or username.</string>
    <string name="auth_login_sso_assistive_text">Please enter your email.</string>
    <string name="auth_help_title">How can we help?</string>
    <string name="auth_help_option_forgot_username">Forgot username</string>
    <string name="auth_help_option_forgot_password">Forgot password</string>
    <string name="auth_help_option_other">Other sign-in issues</string>
    <string name="auth_help_other">Still need help? Contact us directly.</string>
    <string name="auth_help_option_customer_support">Customer support</string>
    <string name="auth_help_option_sign_in_with_qr_code">Sign in with QR code</string>
    <string name="auth_2fa_title">Two Factor Authentication</string>
    <string name="auth_2fa_subtitle">Your account has several 2FA mechanisms configured. Please pick how you want to confirm your identity.</string>
    <string name="auth_2fa_tab_one_time_code">One-time code</string>
    <string name="auth_2fa_tab_security_key">Security key</string>
    <string name="auth_2fa_insert_security_key">Present a security key linked to your Proton Account. <annotation link="more">Learn more</annotation></string>
    <string name="auth_2fa_label">Two-factor code</string>
    <string name="auth_2fa_recovery_code_label">Recovery code</string>
    <string name="auth_2fa_assistive_text">Enter the 6-digit code.</string>
    <string name="auth_2fa_recovery_code_assistive_text">Enter an 8-character recovery code.</string>
    <string name="auth_2fa_action">Authenticate</string>
    <string name="auth_2fa_use_recovery_code">Use recovery code</string>
    <string name="auth_2fa_learn_more">Learn more</string>
    <string name="auth_2fa_use_2fa_code">Use two-factor code</string>
    <string name="auth_2fa_error_empty_code">Enter the 6-digit code.</string>
    <string name="auth_2fa_error_key_security_error">A security error has occurred: %1$s</string>
    <string name="auth_2fa_error_key_abort_error">The operation was aborted.</string>
    <string name="auth_2fa_error_key_invalid_or_not_supported">An error has occurred. Please check your key.</string>
    <string name="auth_2fa_error_key_network_error">A network error has occurred. Please try again.</string>
    <string name="auth_mailbox_title">Unlock your mailbox</string>
    <string name="auth_mailbox_password_label">Mailbox password</string>
    <string name="auth_mailbox_unlock_action">Unlock</string>
    <string name="auth_forgot_password">Forgot password</string>
    <string name="auth_login_general_error">An error occurred.</string>
    <string name="auth_login_external_account_unsupported_title">Proton address required</string>
    <string name="auth_login_external_account_unsupported_message">Get a Proton Mail address linked to this account in your Proton web settings.</string>
    <string name="auth_login_external_account_unsupported_help_action">Learn more</string>
    <string name="auth_login_external_sso_unsupported_title">Single sign-on not supported</string>
    <string name="auth_login_external_sso_unsupported_message">Contact your administrator if the problem persists.</string>
    <string name="auth_login_external_sso_unsupported_action">Got it</string>
    <string name="auth_login_empty_credentials">Credentials should not be empty.</string>
    <string name="auth_mailbox_empty_credentials">Credentials should not be empty.</string>
    <string name="auth_create_address_title">Proton address required</string>
    <string name="auth_create_address_subtitle">You need a Proton email address to use Calendar and other Proton products. You’ll still be able to use %1$s to sign in, and to recover your account.</string>
    <string name="auth_username">Username</string>
    <string name="auth_username_next_action">Continue</string>
    <string name="auth_create_address_result_title">%s is available</string>
    <string name="auth_create_address_result_title_username">%1$s@%2$s will be your new Proton Mail email address.</string>
    <string name="auth_create_address_result_subtitle">You will use this address to sign in to all Proton services.</string>
    <string name="auth_create_address_result_recovery_title">Your recovery email address is:</string>
    <string name="auth_create_address_create">Create address</string>
    <string name="auth_create_address_creating">Creating address</string>
    <string name="auth_create_address_terms">By clicking Create address, you agree to Proton\'s <a href="https://proton.me/legal/terms">Terms and Conditions</a>.</string>
    <string name="auth_create_address_error_credentials">Credentials should not be empty.</string>
    <string name="auth_create_address_error_no_available_domain">No available domain.</string>
    <string name="auth_create_address_error_private_key">Generating private key failed.</string>
    <string name="auth_create_address_error_signed_key_list">Generating key list failed.</string>
    <string name="auth_create_address_error_setusername">Associating username has failed.</string>
    <string name="auth_create_address_error_username_unavailable">Chosen username is unavailable.</string>
    <string name="auth_mailbox_login_error_no_primary_key">No Primary key found.</string>
    <string name="auth_mailbox_login_error_primary_key_error">Primary key error.</string>
    <string name="auth_mailbox_login_error_invalid_passphrase">Invalid passphrase.</string>
    <string name="auth_password_chooser_title">Change your password</string>
    <string name="auth_password_chooser_description">To use the Proton app as a member of an organization, you first need to change your password by signing into Proton through a browser.</string>
    <string name="auth_password_chooser_change">Change Password</string>
    <plurals name="auth_user_check_max_free_error">
        <item quantity="one">Only one free Proton account is allowed.</item>
        <item quantity="other">Only %d free Proton accounts are allowed.</item>
    </plurals>
    <string name="auth_user_check_delinquent_error">Your account is currently on hold due to an overdue invoice.</string>
    <string name="auth_user_check_delinquent_action">Pay invoice</string>
    <string name="auth_account_not_found_error">Error with the account</string>
    <string name="auth_one_account_all_services">One account for all Proton services.</string>
    <string name="auth_create_account">Create an account</string>
    <string name="auth_long_signup">Please wait…</string>
    <string name="auth_long_login">Signing in, please wait…</string>
    <string name="auth_signup_create_account">Create your Proton Account</string>
    <string name="auth_signup_current_email">Use your current email instead</string>
    <string name="auth_signup_external_footnote">With a Proton address, you can use all Proton services</string>
    <string name="auth_signup_internal_footnote">You’ll need a Proton address to use Proton Mail and Proton Calendar</string>
    <string name="auth_signup_create_secure_proton_address">Get a new encrypted email address</string>
    <string name="auth_signup_username">Username</string>
    <string name="auth_signup_domain">Domain</string>
    <string name="auth_signup_email">Email</string>
    <string name="auth_signup_next">Next</string>
    <string name="auth_signup_choose_password">Create your password</string>
    <string name="auth_signup_repeat_password">Repeat password</string>
    <string name="auth_signup_recovery_method_title">Set recovery method (optional)</string>
    <string name="auth_signup_recovery_method_title_mandatory">Set recovery method</string>
    <string name="auth_signup_recovery_method_subtitle">We will send recovery instructions to this email or phone number if you get locked out of your account.</string>
    <string name="auth_signup_recovery_method_subtitle_email_only">We will send recovery instructions to this email if you get locked out of your account.</string>
    <string name="auth_signup_recovery_method_email">Email</string>
    <string name="auth_signup_recovery_method_phone">Phone</string>
    <string name="auth_signup_recovery_method_email_hint">Recovery email</string>
    <string name="auth_signup_recovery_method_phone_hint">Recovery phone number</string>
    <string name="auth_signup_terms_conditions">Terms and Conditions</string>
    <string name="auth_signup_privacy_policy">Privacy Policy</string>
    <string name="auth_credentialless_vpn_no_logs">Certified no-logs VPN</string>
    <string name="auth_credentialless_vpn_title">Welcome to Proton VPN</string>
    <string name="auth_credentialless_vpn_subtitle">Browse privately, access blocked content, and enjoy digital freedom.</string>
    <string name="auth_credentialless_guest_button">Continue as guest</string>
    <string name="auth_credentialless_terms"  comment="Please do not modify the &lt;annotation link=&quot;terms&quot;&gt; tag, only its contents.">By using this app you accept our <annotation link="terms">Terms and Conditions</annotation>.</string>
</resources>