<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) 2020 Proton Technologies AG
  ~ This file is part of Proton Technologies AG and ProtonCore.
  ~
  ~ ProtonCore is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ ProtonCore is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with ProtonCore.  If not, see <https://www.gnu.org/licenses/>.
  -->

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?android:windowBackground">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:fitsSystemWindows="true"
            app:liftOnScroll="true">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:title="Title" />

        </com.google.android.material.appbar.AppBarLayout>

        <androidx.core.widget.NestedScrollView
            android:id="@+id/scrollContent"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="none"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <LinearLayout
                style="@style/AuthContent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/titleText"
                    style="@style/ProtonTextView.Title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/auth_2fa_title" />

                <me.proton.core.presentation.ui.view.ProtonInput
                    android:id="@+id/secondFactorInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/auth_content_top_margin"
                    android:inputType="number"
                    app:help="@string/auth_2fa_assistive_text"
                    app:label="@string/auth_2fa_label" />

                <me.proton.core.presentation.ui.view.ProtonProgressButton
                    android:id="@+id/authenticateButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/auth_content_separator_top_margin"
                    android:text="@string/auth_2fa_action" />

                <me.proton.core.presentation.ui.view.ProtonButton
                    android:id="@+id/recoveryCodeButton"
                    style="@style/ProtonButton.Borderless.Text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/auth_view_items_top_margin"
                    android:text="@string/auth_2fa_use_recovery_code" />

            </LinearLayout>
        </androidx.core.widget.NestedScrollView>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>
