<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) 2020 Proton Technologies AG
  ~ This file is part of Proton Technologies AG and ProtonCore.
  ~
  ~ ProtonCore is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ ProtonCore is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with ProtonCore.  If not, see <https://www.gnu.org/licenses/>.
  -->

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:scrollbars="none">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scaleType="fitXY"
        android:src="@drawable/vpn_gradient_bg"
        app:layout_constraintBottom_toBottomOf="@id/guide_header"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scaleType="center"
        android:src="@drawable/vpn_welcome_globe"
        app:layout_constraintBottom_toBottomOf="@id/guide_header"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:orientation="vertical"
            android:padding="@dimen/gap_large"
            app:layout_constraintBottom_toBottomOf="parent">

            <Space
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <androidx.cardview.widget.CardView
                android:id="@+id/no_logs_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="@dimen/gap_large"
                android:foreground="?attr/selectableItemBackground"
                app:cardBackgroundColor="@color/background_secondary"
                app:cardCornerRadius="@dimen/default_corner_radius"
                app:cardPreventCornerOverlap="true">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/gap_medium"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:src="@drawable/vpn_certified_no_logs" />

                    <TextView
                        style="@style/ProtonTextView.Subtitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="@dimen/gap_medium"
                        android:layout_marginEnd="@dimen/gap_medium"
                        android:text="@string/auth_credentialless_vpn_no_logs"
                        android:textColor="?attr/proton_text_norm" />

                    <ImageView
                        android:layout_width="16dp"
                        android:layout_height="16dp"
                        android:layout_gravity="center_vertical"
                        android:src="@drawable/ic_proton_arrow_out_square"
                        tools:tint="?attr/proton_icon_weak" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <TextView
                style="@style/Proton.Text.Hero"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="@dimen/gap_medium"
                android:text="@string/auth_credentialless_vpn_title" />

            <TextView
                style="@style/Proton.Text.Default"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="@dimen/gap_huge"
                android:gravity="center_horizontal"
                android:text="@string/auth_credentialless_vpn_subtitle"
                android:textColor="?attr/proton_text_weak" />

            <me.proton.core.presentation.ui.view.ProtonProgressButton
                android:id="@+id/sign_in_guest"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/gap_medium"
                android:text="@string/auth_credentialless_guest_button" />

            <me.proton.core.presentation.ui.view.ProtonButton
                android:id="@+id/sign_up"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/gap_medium"
                android:text="@string/auth_create_account"
                android:visibility="gone" />

            <me.proton.core.presentation.ui.view.ProtonButton
                android:id="@+id/sign_in"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/gap_large_plus"
                android:text="@string/auth_sign_in"
                app:backgroundTint="@color/btn_secondary_background_selector" />

            <TextView
                android:id="@+id/terms"
                style="@style/Proton.Text.Caption"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:textColor="?attr/proton_text_weak"
                tools:text="@string/auth_credentialless_terms" />
        </LinearLayout>
    </ScrollView>

</FrameLayout>
