<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) 2021 Proton Technologies AG
  ~ This file is part of Proton Technologies AG and ProtonCore.
  ~
  ~ ProtonCore is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ ProtonCore is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with ProtonCore.  If not, see <https://www.gnu.org/licenses/>.
  -->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/double_top_margin">

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabLayout"
        style="@style/ProtonTabStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/auth_content_top_margin"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/auth_2fa_tab_security_key"
            android:visibility="gone" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/auth_2fa_tab_one_time_code" />

    </com.google.android.material.tabs.TabLayout>

    <LinearLayout
        android:id="@+id/oneTimeCodeGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_gap"
        android:layout_marginBottom="@dimen/default_gap"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/tabLayout"
        tools:visibility="visible">

        <me.proton.core.presentation.ui.view.ProtonInput
            android:id="@+id/twoFA"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            app:help="@string/auth_enter_six_digit_code"
            app:label="@string/auth_second_factor_code"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/securityKeyGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/auth_content_separator_top_margin"
        android:layout_marginBottom="@dimen/default_gap"
        android:orientation="vertical"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/tabLayout"
        tools:visibility="visible">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/gap_large"
            app:srcCompat="@drawable/ic_fido" />

        <TextView
            android:id="@+id/securityKeyText"
            style="@style/Proton.Text.Default"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/gap_large"
            android:text="@string/auth_2fa_insert_security_key" />
    </LinearLayout>

    <FrameLayout
        android:id="@+id/progressLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?android:windowBackground"
        android:elevation="3dp"
        tools:visibility="gone">

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:elevation="3dp"
            android:indeterminate="true"
            android:indeterminateTint="?attr/brand_norm" />
    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
