<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) 2020 Proton Technologies AG
  ~ This file is part of Proton Technologies AG and ProtonCore.
  ~
  ~ ProtonCore is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ ProtonCore is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with ProtonCore.  If not, see <https://www.gnu.org/licenses/>.
  -->

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?android:windowBackground">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:fitsSystemWindows="true"
            app:liftOnScroll="true">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:navigationIcon="@drawable/ic_close"
                tools:title="Title" />

        </com.google.android.material.appbar.AppBarLayout>

        <androidx.core.widget.NestedScrollView
            android:id="@+id/scrollContent"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="none"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <LinearLayout
                style="@style/AuthContent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/titleText"
                    style="@style/ProtonTextView.Title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/auth_create_address_result_title" />

                <TextView
                    android:id="@+id/subtitleText"
                    style="@style/ProtonTextView.Subtitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/auth_subtitle_top_margin"
                    android:text="@string/auth_create_address_result_subtitle" />

                <TextView
                    android:id="@+id/resultText"
                    style="@style/ProtonTextView.Title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/auth_content_top_margin"
                    android:text="@string/auth_create_address_result_recovery_title"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/externalEmailText"
                    style="@style/ProtonTextView.Subtitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/auth_subtitle_top_margin"
                    android:textSize="16sp" />

                <me.proton.core.presentation.ui.view.ProtonProgressButton
                    android:id="@+id/createAddressButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/auth_content_separator_top_margin"
                    android:text="@string/auth_create_address_create" />

                <TextView
                    android:id="@+id/termsConditionsText"
                    style="@style/ProtonTextView.Subtitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/auth_content_top_margin"
                    android:text="@string/auth_create_address_terms"
                    android:textSize="16sp" />
            </LinearLayout>
        </androidx.core.widget.NestedScrollView>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>

